[package]
name = "dhtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustydht-lib = { version = "*", default-features = false }
argh = { version = "*", default-features = false }
tokio = { version = "*", default-features = false }
quiche = { version = "*", default-features = false }
ssh-key = { version = "*", default-features = false, features = ["alloc", "std"] }
anyhow = { version = "*", default-features = false }
